[tool.poetry]
name = "cpu-runnig-llm"
version = "0.1.0"
description = ""
authors = ["Manasforcebolt <manas.chauhan@cloudanalogy.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.12"
torch = "2.1.0"
faiss-cpu = "^1.7.4"
accelerate = "^0.25.0"
transformers = "^4.35.2"
sentence-transformers = "^2.2.2"
tiktoken = "^0.5.2"
huggingface-hub = "^0.19.4"
streamlit = "^1.29.0"
streamlit-chat = "^0.1.1"
langchain = "^0.0.345"
pypdf = "^3.17.1"
ctransformers = "^0.2.27"
watchdog = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
